[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "questset-ssq-delta-offset"
version = "0.1.0"
description = "Reproducible SSQ and traffic-motion delta-offset analysis for the open Questset VR dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.scripts]
questset-analyze = "questset_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
